<resources>
    <string name="app_name">RealEstateManager</string>
    <string name="splash_text">Let\'s sel</string>
    <string name="API_KEY">ApiKey</string>


    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_listView">ListView</string>
    <string name="bottom_navigation_menu_search">Search</string>
    <string name="bottom_navigation_menu_map">MapView</string>
    <string name="bottom_navigation_menu_logout">LOGOUT</string>

    <!-- ALERT DIALOG -->
    <string name="titlle_alert">Are your sure you want to logout.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>


    <!-- menu drawer -->
    <string name="menu_create">CREATE A PROPERTY</string>
    <string name="menu_conversion">CONVERSION</string>
    <string name="menu_simulator">CREDIT SIMULATOR</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Activity detail -->
    <string name="textView_media">Media</string>
    <string name="tv_description_detail">Description</string>
    <string name="tv_surface_detail">Surface</string>
    <string name="tv_nbrRooms_detail">Numbers of rooms\n test</string>
    <string name="tv_date_detail">Date</string>
    <string name="tv_location_detail">Location</string>
    <string name="tv_nbrBath_detail">Numbers of bathrooms</string>
    <string name="tv_nbrBed_detail">Numbers of bedrooms</string>
    <string name="tv_price_detail">Price</string>
    <string name="tv_agent_detail">Manage by</string>

    <!-- Activity Simulator -->
    <string name="tittle_simulator">Monthly payments of your mortgage</string>
    <string name="tv_amount">Amount of your loan</string>
    <string name="tv_time">Duration of your loan</string>
    <string name="tv_percent">Interest rate before negotiation</string>
    <string name="tv_insurance">Insurance rate</string>
    <string name="tv_tittle_result">Your monthly payment will be</string>
    <string name="tv_result">dollars/month</string>
    <string name="bt_calculation">CALCULATION</string>
    <string name="dollars">dollars</string>
    <string name="Years">Years</string>
    <string name="toast_amount">you have to select amount</string>
    <string name="toast_period">you have to select period</string>
    <string name="toast_percent">you have to select percent</string>
    <string name="tv_total_payments">Your total payments will be</string>
    <string name="share_subject">the approximate result of the loan simulation is:</string>

    <!-- conversion activity -->
    <string name="tv_bottom_conversion">All figures are mid-market rates, which are not available to consumers and are given for information only.</string>
    <string name="tv_usd">USD</string>
    <string name="tv_eur">EUR</string>
    <string name="et_amount_conversion">enter your amount</string>
    <string name="tv_amount_conversion">Amount</string>
    <string name="tv_tittle_conversion">XE currency converter: 1 USD to EUR = 0.844802 Euros</string>
    <string name="euro">Euros</string>

    <!-- auth and login activity -->
    <string name="editText_name">Name</string>
    <string name="editText_mail">Mail</string>
    <string name="editText_password">Password</string>
    <string name="btn_register">SIGN IN</string>
    <string name="tv_already">Already Register ? Login Here</string>
    <string name="tv_register">Register</string>
    <string name="tv_login_login">Login</string>
    <string name="tv_login">Welcome Back!</string>
    <string name="btn_login">LogIn</string>

    <!-- add property activity -->
    <string name="tittle">Create your property</string>
    <string name="tv_detail">Detail</string>
    <string name="et_surface">Surface</string>
    <string name="et_room">Room</string>
    <string name="et_bathroom">Bathroom</string>
    <string name="et_bedroom">bedroom</string>
    <string name="et_address">Address</string>
    <string name="tv_date">Date</string>
    <string name="tv_agent">Agent</string>
    <string name="tv_media">Media</string>
    <string name="tv_photo_cover">Photo Cover</string>
    <string name="tv_take_picture">Take picture</string>
    <string name="tv_choose_picture">Choose picture</string>
    <string name="tv_description">Description</string>
    <string name="et_price">Price</string>
    <string name="et_city">City</string>


</resources>
