<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/create_property"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/menu_create"/>
        <item
            android:id="@+id/price_conversion"
            android:icon="@drawable/currency_rates"
            android:title="@string/menu_conversion"/>
        <item
            android:id="@+id/simulator"
            android:icon="@drawable/cashback"
            android:title="@string/menu_simulator"/>
        <item
            android:id="@+id/logOut"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/bottom_navigation_menu_logout"/>
    </group>

</menu>